Changelog
=========


1.0.1 (unreleased)
------------------

- Implement newslistingblock listing styles + Convert to html list. This has now the same styles as the regular newslisting.
  [mathias.leimgruber]

- Implement news portlet styles.
  [mathias.leimgruber]

- Implement news listing styles.
  [mathias.leimgruber]

- Convert newslisting into a html list for the sake of accessibility.
  [mathias.leimgruber]

1.0.0 (2015-12-04)
------------------

- Nothing changed yet